--- a/main/index.html
+++ b/main/index.html
@@ -366,12 +366,12 @@
 
         .channel-controls {
             display: flex;
+            flex-direction: column;
             gap: 16px;
             margin-bottom: 24px;
             background: #f8f9fa;
             padding: 16px;
             border-radius: 8px;
-            align-items: center;
         }
 
         .control-group {
@@ -407,6 +407,30 @@
         .channel-indicator i {
             font-weight: 600;
             color: var(--secondary-color);
+        }
+
+        .channel-warning {
+            width: 100%;
+            background: #fff3cd;
+            border-left: 4px solid var(--warning-color);
+            padding: 12px 16px;
+            border-radius: 6px;
+            color: #856404;
+            font-size: 14px;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            box-sizing: border-box;
+        }
+
+        .channel-warning i {
+            color: var(--warning-color);
+            font-size: 16px;
+            flex-shrink: 0;
+        }
+
+        .channel-warning span {
+            line-height: 1.5;
         }
 
         .status-display {
@@ -619,7 +643,7 @@
                 </div>
                 <div class="status-item">
                     <label>当前通道:</label>
-                    <span class="status-value" id="current-extruder">通道 1</span>
+                    <span class="status-value" id="current-extruder">无耗材</span>
                 </div>
                 <div class="status-item">
                     <label>电机运行:</label>
@@ -640,6 +664,10 @@
                         onchange="sendKeyValue('uload_time', this.value)">
                 </div> -->
 
+                <div class="channel-warning">
+                    <i class="fas fa-exclamation-triangle"></i>
+                    <span>请确保选择的通道和实际使用中通道一致，要不可能会导致两通道同时进料冲突锁定</span>
+                </div>
                 <div class="channel-indicator">
                     <label for="extruder">当前通道:</label>
                     <select class="material-select" id="extruder" onchange="sendKeyValue('extruder', this.value)">
